modificação da ultima aula

--- a/index.html
+++ b/index.html
@@ -1,2 +1,24 @@
-<h1>Fabr&iacute;cio Mateus</h1>
-<h2>Somethings</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Somethings</title>
+	<style>
+	body { margin: 0; }
+	div {background-image: url(http://imagensface.com.br/imagens/imagens-animadas-paisagem-noite-a6ffc6.jpg);
+		background-repeat: no background-repeat;
+		background-size: cover;
+		background-color: green;
+		padding:  100px  0px;
+		  text-align: center;}
+		</style>
+</head>
+<body>
+	<div>
+	<img src="http://imgms.recreionline.abril.com.br/1/img-corpo-conteudo-d0.jpeg?1322733416" width="128" height="128">
+	<h1>Fabr&iacute;cio Mateus</h1></div>
+	<h2 align="center">Meu primeiro post</h2>
+	<p align="center">19/03/2014 <a href="#"> autor: Fabr&iacute;cio Mateus</a></p>
+	<p align="center">conte&uacute;do do post conte&uacute;do do post conte&uacute;do do postconte&uacute;do do postconte conte&uacute;do do postconteconte&uacute;do do post conte&uacute;do do post conte&uacute;do do post conte&uacute;do do post conte&uacute;do do post </p>
+</body>
+</html>
