texto post sobre a última aula

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
 	<div>
-	<img src="http://imgms.recreionline.abril.com.br/1/img-corpo-conteudo-d0.jpeg?1322733416" width="128" height="128">
+	<img src="http://2.bp.blogspot.com/-IfJa8E4tP68/UTZA6_MS69I/AAAAAAAAK8c/oXDWmVFt354/s1600/13551955-hermosos-ojos-de-un-lobo-salvaje.jpg" width="128" height="128">
 	<h1>Fabr&iacute;cio Mateus</h1></div>
 	<h2 align="center">Meu primeiro post</h2>
 	<p align="center">19/03/2014 <a href="#"> autor: Fabr&iacute;cio Mateus</a></p>
-	<p align="center">conte&uacute;do do post conte&uacute;do do post conte&uacute;do do postconte&uacute;do do postconte conte&uacute;do do postconteconte&uacute;do do post conte&uacute;do do post conte&uacute;do do post conte&uacute;do do post conte&uacute;do do post </p>
+	<p align="center">Na última aula abordada começamos a aprender sobre html, criamos contas no GitHub do qual instalamos em nosso micro. Nele adicionamos um cabeçalho, logo depois de inserir alguns códigos upamos ele para o site do git. A criação do nosso blog através do html ja está tomando forma, adicionamos algumas imagens, cores no fundo da página etc :). </p>
 </body>
 </html>
